<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:textSize="25sp"
            android:padding="5dp"
            android:gravity="start"
            android:inputType="phone"
            android:hint="@string/edt_phone_hint"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_code_text"
            android:theme="@style/PrimaryButton"
            />

        <EditText
            android:id="@+id/edt_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:inputType="number"
            android:hint="@string/edt_code_hint"
            android:maxLength="6"/>

        <Button
            android:id="@+id/btn_send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn_send_code_text"
            android:theme="@style/PrimaryButton"
            />

    </LinearLayout>

</LinearLayout>