<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_turnover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:text="@string/tv_turnover_text"/>

    <LinearLayout
        android:id="@+id/ll_day"
        android:layout_below="@+id/tv_turnover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:text="@string/stat_day"/>

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_week"
        android:layout_below="@+id/ll_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:text="@string/tv_week_text"/>

        <TextView
            android:id="@+id/tv_week"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_month"
        android:layout_below="@id/ll_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:text="@string/tv_month_text"/>

        <TextView
            android:id="@+id/tv_month"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="30sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_year"
        android:layout_below="@id/ll_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:text="@string/tv_year_text"/>


        <TextView
            android:id="@+id/tv_year"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            />

    </LinearLayout>

    <!--
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_below="@+id/ll_year"
        android:visibility="visible"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:textSize="30sp"
        android:layout_marginTop="20dp"/>

-->



</RelativeLayout>